# icecream_robot

./: .gitignore  .gitmodules
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  icecream_robot.launch.py
src/gz_ros2_control/: .pre-commit-config.yaml
src/gz_ros2_control/gz_ros2_control/src/: gz_ros2_control_plugin.cpp
src/icecream_dashboard/: CMakeLists.txt  package.xml
src/icecream_dashboard/qml/: CobotArm.qml  FlavorButton.qml  Main.qml  StatePanel.qml
src/icecream_dashboard/src/: FlavorNode.cpp  FlavorNode.h  main.cpp
src/icecream_statemachine/: package.xml  setup.cfg  setup.py
src/icecream_statemachine/icecream_statemachine/: cobot_node.py  cobot_teleop.py  mock_cobot_node.py  mock_dispenser_node.py  mock_icecream_node.py  state_machine_node.py  test_swirl.py
src/icecream_statemachine/launch/: icecream_gazebo.launch.py  icecream_system.launch.py
src/icecream_statemachine/worlds/: icecream_station.world
src/mycobot_ros2/mycobot_description/meshes/cup_end_effector/: End_Effector_70mm.dae
src/mycobot_ros2/mycobot_description/meshes/icecream_station/: icecream_machine.dae
src/mycobot_ros2/mycobot_description/urdf/mycobot_pro_450/: mycobot_pro_450.urdf  mycobot_pro_450.urdf.bak
src/mycobot_ros2_humble/mycobot_pro/pro450_moveit2/config/: firefighter.ros2_control.xacro  firefighter.srdf  joint_limits.yaml  kinematics.yaml  servo_config_450.yaml
